--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,7 +8,7 @@
 @import "basics/helpers";
 @import "basics/layout";
 @import "basics/base";
-@import "basics/links";
+// @import "basics/links";
 @import "basics/forms";
 
 
@@ -16,12 +16,12 @@
 @import "RootCmp";
 
 @import "pages/AboutUs";
-@import "pages/HomePage";
-@import "pages/CarIndex";
+// @import "pages/HomePage";
+@import "pages/StayIndex";
 @import "pages/ReviewIndex";
-@import "pages/UserDetails";
-@import "pages/TaskDetails";
-@import "pages/LoginSignup";
+// @import "pages/UserDetails";
+// @import "pages/TaskDetails";
+// @import "pages/LoginSignup";
 
 // Components
 @import "cmps/list";
@@ -31,9 +31,7 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 
-@import "cmps/CarFilter";
+@import "cmps/StayFilter";
 @import "cmps/ReviewEdit";
 @import "cmps/ReviewList";
 @import "cmps/ReviewPreview";
-// @import "cmps/CarList";
-// @import "cmps/CarPreview";
