--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -2,7 +2,6 @@
     display: flex;
     min-height: 3.5rem;
 
-    background-color: $clr4;
     padding: rem(10px) 1rem;
     
     nav {
@@ -18,9 +17,10 @@
         }
 
         .logo {
-            font-size: 1.4em;
-            font-weight: bold;
-            margin-inline-end: 2em;
+            img {
+                width: 150px;
+                height: auto;
+            }
         }
 
         .login-link {
@@ -48,11 +48,11 @@
             color: $clr6;
         }
 
-        img {
-            width: 32px;
-            aspect-ratio: 1;
-            border-radius: 50%;
-        }
+        // img {
+        //     width: 32px;
+        //     aspect-ratio: 1;
+        //     border-radius: 50%;
+        // }
         
         .btn-link {
             color: $clr2;
