--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,6 +31,7 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 
+@import "cmps/StayList";
 @import "cmps/StayFilter";
 @import "cmps/ReviewEdit";
 @import "cmps/ReviewList";
