--- a/src/assets/styles/cmps/StayFilter.scss
+++ b/src/assets/styles/cmps/StayFilter.scss
@@ -1,10 +1,9 @@
-.car-filter {
+.stay-filter {
     display: grid;
     grid-template-columns: 1fr 5em 5em auto;
     align-items: center;
     gap: 0 .5em;
 
-    background-color: $clr4;
     padding: .5em;
 
     h3 {
