--- a/src/assets/styles/pages/StayIndex.scss
+++ b/src/assets/styles/pages/StayIndex.scss
@@ -1,10 +1,11 @@
-.car-index {
+.stay-index {
+    color: $clr7;
     header {
         display: flex;
         align-items: center;
         justify-content: space-between;
 
-        padding-block: .3em;
+        // padding-block: .3em;
     }
 
     h2 {
