--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -5,12 +5,13 @@ $clr3: #574f7d;
 $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
-$clr7: #222;
+$clr7: #222222;
 
 $gray1: #ddd;
 $gray2: #aaa;
 $gray3: #777;
 $gray4: #333;
+$gray5: #6A6A6A;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
