--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
-}
+} 
+
 
 html {
     line-height: 1.6;
@@ -8,10 +9,12 @@ html {
 }
     
 body {
-    max-width: 1024px;
-    margin: 0 auto;
+    // max-width: 1024px;
+    // margin: 0 auto;
+    // padding: 80px;
+    font-family: cereal-Medium;
 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: rem(18px);
 }
 
