--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -1,16 +1,20 @@
 .stay-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: .5em;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    // gap: .5em;
+    gap: 24px;
+    // background-color: yellow;
 
     li {
-        display: grid;
-        grid-template-columns: max-content auto;
-        padding: .5em;
-        background-color: $clr2;
+        // display: grid;
+        // grid-template-columns: max-content auto;
+        
+        // padding: .5em;
+        // background-color: $clr2;
 
-        color: $clr6;
-
+        // color: $clr6;
+        // height: 300px;
+// background-color: aqua;
         .actions {
             justify-self: end;
 
