--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -1,10 +1,32 @@
-.car-preview {
-    a {
-        color: $clr4;
-        padding: 0;
-    }    
-	p {
-		margin-block: 0 0.2rem;
-        font-size: .85em;
-	}
+.stay-preview {
+    font-size: 15px;
+    line-height: 19px;
+    background-color: white;
+    color: $clr7;
+    font-family: 'cereal-medium', sans-serif;
+    font-size: 15px;
+
+    span {
+        font-weight: bold;
+    }
+
+    h2 {
+        color: $gray5;
+    }
+
+    img {
+        border-radius: 10px;
+        aspect-ratio: 0.51 / 0.49;
+    }
+
+
+    // .coursel
+
+    // :global(.react-responsive-carousel .control-dots .dot){
+    //     background-color: blue;
+    // }
+    // .react-responsive-carousel .control-dots {
+    //     pointer-events: none !important;  /* Disable mouse interaction */
+    //     cursor: default !important;       /* Change the cursor to default (not clickable) */
+    //   }
 }
