--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -12,14 +12,15 @@ body {
     // max-width: 1024px;
     // margin: 0 auto;
     // padding: 80px;
-    font-family: cereal-Medium;
+    font-family:'cereal-regular-vf';
 
     // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: rem(18px);
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin: 0 0 0.6em;
+    margin: 0;
+    // margin: 0 0 0.6em;
 }
 
 img {
