--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -3,6 +3,28 @@
     // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
 }
 @font-face {
-    // font-family: montserrat;
-    // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+    font-family: cereal-regular;
+    src: url(../../fonts/AirbnbCereal_W_Bk.otf);
 }
+
+// @font-face {
+//     font-family: cereal-regular-vf;
+//     src: url(../../fonts/AirbnbCerealVF.woff2);
+//     // src: url(../../fonts/AirbnbCerealVF.woff2);
+// }
+
+@font-face {
+    font-family: "cereal-regular-vf";
+    // src: url('src/assets/fonts/AirbnbCereal_W_Bk.otf') format('opentype');
+    // src: url('src/assets/fonts/AirbnbCerealVF_W_Wght.woff2') format('opentype');
+    src: url("src/assets/fonts/AirbnbCerealVF.woff2") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+// @font-face {
+//     font-family: 'airBnbCereal'; /* The name you’ll use in your CSS */
+//     src: url('../../../../fonts/airBnbCereal_W_Bk.woff') format('woff'); /* Path to your font file */
+//     font-weight: normal;
+//     font-style: normal;
+// }
