--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -37,4 +37,4 @@
 @import "cmps/ReviewEdit";
 @import "cmps/ReviewList";
 @import "cmps/ReviewPreview";
-@import "cmps/CarrouselFilter"
+@import "cmps/CategoryFilter"
