--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -13,6 +13,8 @@ $gray3: #777;
 $gray4: #333;
 $gray5: #6A6A6A;
 
+$font-grey: #717171;
+
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
