--- a/src/assets/styles/cmps/CategoryFilter.scss
+++ b/src/assets/styles/cmps/CategoryFilter.scss
@@ -16,13 +16,36 @@
         align-items: center;
     }
 
+    .carousel-container {
+        padding: 0 !important;
+        margin: 0 !important;
+    }
+    
+    .react-multi-carousel-item {
+        padding: 0 !important;
+        margin: 0 !important;
+        display: contents !important;
+        // display: flex;
+        // justify-content: center;
+    }
+
     .carrousel-item {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 5px;
+        padding: 0 !important;
+        margin: 0 !important;
         box-sizing: border-box;
         width: 100%; 
+    }
+
+    .carrousel-items-wrapper {
+        display: flex;
+        gap: 32px;
+    }
+
+    .carrousel-filter button:last-child {
+        margin-right: 0;
     }
 
     button {
@@ -33,6 +56,7 @@
         background-color: #ffffff;
         color: #000000;
         padding: 4px;
+        margin-right: 32px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -49,12 +73,13 @@
             height: 24px;
             object-fit: contain;
             margin-bottom: 5px;
+            // background-image: url(chrome-extension://mbnbehikldjhnfehhnaidhjhoofhpehk/inspector-current-div.3db0786d.svg) !important;
         }
 
         span {
             font-size: 12px;
             font-weight: bold;
-            color: #333;
+            color: #6A6A6A;;
             text-align: center;
         }
     }
@@ -64,8 +89,8 @@
         top: 50%;
         transform: translateY(-50%);
         z-index: 10;
-        width: 32px;
-        height: 32px;
+        width: 33px;
+        height: 33px;
         border-radius: 50%;
         background-color: #FFFFFF;
         border: 1px solid #ddd;
