--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -37,4 +37,5 @@
 @import "cmps/ReviewEdit";
 @import "cmps/ReviewList";
 @import "cmps/ReviewPreview";
-@import "cmps/CategoryFilter"
+@import "cmps/CategoryFilter";
+@import "cmps/search-bar/SearchBar.scss";
