Basic stayDetails - changes before pull to main

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 // @import "pages/HomePage";
 @import "pages/StayIndex";
 @import "pages/ReviewIndex";
+@import "pages/StayDetails";
 // @import "pages/UserDetails";
 // @import "pages/TaskDetails";
 // @import "pages/LoginSignup";
@@ -37,4 +38,6 @@
 @import "cmps/ReviewEdit";
 @import "cmps/ReviewList";
 @import "cmps/ReviewPreview";
-@import "cmps/CarrouselFilter"
+@import "cmps/CarrouselFilter";
+@import "cmps/StayImgs";
+@import "cmps/StayAmenities";
