--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -1,4 +1,5 @@
 .main-container main {
     min-height: calc(100vh - 7rem);
     overflow: hidden; // Quick fix for JSONs in <pre>
+    font-family:cereal-regular-vf;
 }
