--- a/src/assets/styles/cmps/search-bar/SearchBar.scss
+++ b/src/assets/styles/cmps/search-bar/SearchBar.scss
@@ -32,6 +32,15 @@
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
+
+  .search-bar-input {
+    all: unset;
+    font-weight: 400;
+    font-size: 0.8rem;
+    color: #717171;
+    padding-left: 0.2rem;
+    max-width: 100px;
+  }
   
   .search-icon-div {
     display: flex;
