Add user wishlist

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -42,3 +42,4 @@
 @import "cmps/search-bar/SearchBar.scss";;
 @import "cmps/StayImgs";
 @import "cmps/StayAmenities";
+@import "cmps/LoginModal.scss";
