--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,11 +1,12 @@
 // Colors
 $clr1: #ce2e6c;
+$heartClr:rgb(255, 56, 92);
 $clr2: #4f3a65;
 $clr3: #574f7d;
 $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
-$clr7: #222222;
+$clr7: rgb(34, 34, 34);
 
 $gray1: #ddd;
 $gray2: #aaa;
