--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -7,7 +7,7 @@
     // font-family: 'airBnbCereal', sans-serif;
     font-size: 15px;
     position: relative;
-    font-family:cereal-regular-vf;
+    font-family: cereal-regular-vf;
 
     .gray-class {
         color: $gray5;
@@ -72,7 +72,7 @@
         display: flex;
         flex-direction: row;
         padding: 0;
-        top:0;
+        top: 0;
         right: 0;
         color: $clr7;
         align-items: center;
@@ -81,9 +81,31 @@
         }
     }
 
+    &.wishlist {
+        .heart-svg-container {
+            i {
+                svg {
+                    fill: $heartClr;
+                }
+            }
+        }
+    }
+
+    .heart-svg-container {
+        i {
+            svg {
+                stroke: white;
+                fill: rgba(0, 0, 0, 0.5);
+                height: 24px; 
+                width: 24px; 
+                stroke: white;
+            }
+        }
+    }
+
     .carousel {
-               border-radius: 10px;
-            //    aspect-ratio: 0.51 / 0.49; 
+        border-radius: 10px;
+        //    aspect-ratio: 0.51 / 0.49; 
     }
     // .coursel
 
