--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -39,6 +39,7 @@
 @import "cmps/ReviewList";
 @import "cmps/ReviewPreview";
 @import "cmps/CategoryFilter";
-@import "cmps/search-bar/SearchBar.scss";;
+@import "cmps/search-bar/SearchBar.scss";
+@import "cmps/StayOrder.scss";
 @import "cmps/StayImgs";
 @import "cmps/StayAmenities";
