--- a/src/assets/styles/cmps/StayImgs.scss
+++ b/src/assets/styles/cmps/StayImgs.scss
@@ -1,54 +1,93 @@
+// .stay-imgs {
+//     display: grid;
+//     width: 100%;
+//     height: auto;
+//     aspect-ratio: 1220 / 503;
+//     margin: 0 auto;
+//     grid-template-columns: repeat(4, 1fr);
+//     grid-template-rows: repeat(2, auto);
+//     grid-template-areas:
+//         "img1 img1 img2 img3"
+//         "img1 img1 img4 img5";
+// }
+
+// .stay-img {
+//     object-fit: cover;
+//     height: 100%;
+//     width: 100%;
+//     display: block;
+// }
+
+// .img1 {
+//     grid-area: img1;
+//     border-radius: 20px 0 0 20px;
+//     padding-bottom: 8px;
+//     padding-right: 8px;
+// }
+
+// .img2 {
+//     grid-area: img2;
+//     padding-bottom: 8px;
+//     padding-right: 8px;
+// }
+
+// .img3 {
+//     grid-area: img3;
+//     border-radius: 0 20px 0 0;
+//     padding-bottom: 8px;
+//     padding-right: 8px;
+// }
+
+// .img4 {
+//     grid-area: img4;
+//     padding-bottom: 8px;
+//     padding-right: 8px;
+// }
+
+// .img5 {
+//     grid-area: img5;
+//     border-radius: 0 0 20px 0;
+//     padding-bottom: 8px;
+//     padding-right: 8px;
+// }
 .stay-imgs {
     display: grid;
-    height: 503px;
-    width: 1220px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, auto);
-    // grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    grid-template-areas:
-        "img1 img1 img2 img3"
-        "img1 img1 img4 img5";
-    place-self: center;
-    // border-radius: 10px;
-    // grid-gap: 8px;
-}
-
-.stay-img {
-    object-fit: cover;
-    height: 100%;
+    width: 100%;
+    max-width: 1220px;
+    margin: 0 auto;
+    gap: 8px;
+    grid-template-columns: 1fr 1fr;
+    height: auto;
 }
 
 .img1 {
-    grid-area: img1;
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 20px 0 0 20px;
-    padding-bottom: 8px;
-    padding-right: 8px;
-    // height: 503px;
-    // width: 530px;
+    aspect-ratio: 1 / 1; // שומר עליה כריבוע בגובה מלא
 }
 
-.img2 {
-    grid-area: img2;
-    padding-bottom: 8px;
-    padding-right: 8px;
+.stay-imgs-right {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 8px;
+}
+
+.stay-imgs-right img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    display: block;
 }
 
 .img3 {
-    grid-area: img3;
     border-radius: 0 20px 0 0;
-    padding-bottom: 8px;
-    padding-right: 8px;
-}
-
-.img4 {
-    grid-area: img4;
-    padding-bottom: 8px;
-    padding-right: 8px;
 }
 
 .img5 {
-    grid-area: img5;
     border-radius: 0 0 20px 0;
-    padding-bottom: 8px;
-    padding-right: 8px;
 }
