Add host orders

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "pages/StayIndex";
 @import "pages/ReviewIndex";
 @import "pages/StayDetails";
+@import "pages/HostOrders.scss";
 // @import "pages/UserDetails";
 // @import "pages/TaskDetails";
 // @import "pages/LoginSignup";
