--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -6,13 +6,15 @@ $clr3: #574f7d;
 $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
-$clr7: rgb(34, 34, 34);
+$clr7: #222222;
 
-$gray1: #ddd;
-$gray2: #aaa;
+$gray1: #dddddd;
+$gray2: #aaaaaa;
 $gray3: #777;
 $gray4: #333;
 $gray5: #6A6A6A;
+$gray6: #f2f2f2;
+$gray7: #f2f2f2a4;
 
 $font-grey: #717171;
 
