--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -1,24 +1,29 @@
 * {
     box-sizing: border-box;
-} 
+}
 
 
 html {
     line-height: 1.6;
     color: $clr2;
 }
-    
+
 body {
     // max-width: 1024px;
     // margin: 0 auto;
     // padding: 80px;
-    font-family:'cereal-regular-vf';
-
+    font-family: 'cereal-regular-vf';
+    color: $clr7;
     // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: rem(18px);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
     // margin: 0 0 0.6em;
 }
