--- a/src/assets/styles/cmps/LoginModal.scss
+++ b/src/assets/styles/cmps/LoginModal.scss
@@ -11,38 +11,78 @@
   z-index: 1000;
 }
 
+h1 {
+  font-size: 16px;
+  text-align: center;
+}
+
 .modal-content {
   background-color: white;
   padding: 30px;
-  border-radius: 10px;
-  width: 400px;
+  border-radius: 32px;
+  width: 568px;
   text-align: center;
   position: relative;
 }
 
 .close-button {
   position: absolute;
-  top: 12px;
-  left: 16px;
+  top: 24px;
+  left: 24px;
   font-size: 24px;
+  padding-bottom: 24px;
   cursor: pointer;
+  padding: 0;
+}
+
+.welcome-title {
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 500;
+  // padding: 32px;
+  text-align: start;
+  padding: 0;
+  padding-top: 10px;
 }
 
 input[type="text"] {
   width: 100%;
   padding: 12px;
+  font-size: 16px;
+  font-weight: 400;
 //   margin: 12px 0;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
 
 .submit-btn {
-  background-color: #ff385c;
+  background: linear-gradient(to right, #E61E4D 0%, #E31C5F 50%, #D70466 100%);
   color: white;
   padding: 12px;
   width: 100%;
   margin-bottom: 10px;
   border: none;
   border-radius: 5px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
   cursor: pointer;
+}
+
+.switch-to-signup {
+  background-color: white;
+  font-weight: 500;
+  font-size: 16px;
+  color: $clr7;
+  border-color: green ;
+  height: 48px;
+  border: 1px solid;
+  border-radius: 5px;
+  align-content: center;
+  
+  &:hover{
+    background-color: rgb(248, 244, 244);
+    cursor: pointer;
+  }
+
 }
