--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -5,16 +5,21 @@
     gap: 24px;
     // background-color: yellow;
 
+
     li {
+        &:hover .arrow {
+            opacity: 1;
+        }
+
         // display: grid;
         // grid-template-columns: max-content auto;
-        
+
         // padding: .5em;
         // background-color: $clr2;
 
         // color: $clr6;
         // height: 300px;
-// background-color: aqua;
+        // background-color: aqua;
         .actions {
             justify-self: end;
 
