--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -96,8 +96,8 @@
             svg {
                 stroke: white;
                 fill: rgba(0, 0, 0, 0.5);
-                height: 24px; 
-                width: 24px; 
+                height: 24px;
+                width: 24px;
                 stroke: white;
             }
         }
@@ -105,8 +105,38 @@
 
     .carousel {
         border-radius: 10px;
+
+        .arrow {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: white;
+            color: $clr7;
+            border: none;
+            width: 32px;
+            height: 32px;
+            text-align: center;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            padding: 0;
+            opacity: 0;
+        }
+
         //    aspect-ratio: 0.51 / 0.49; 
+        .arrow-next {
+            right: 10px;
+        }
+
+        .arrow-prev {
+            left: 10px;
+        }
     }
+
     // .coursel
 
     // :global(.react-responsive-carousel .control-dots .dot){
