--- a/src/assets/styles/cmps/StayOrder.scss
+++ b/src/assets/styles/cmps/StayOrder.scss
@@ -110,6 +110,12 @@
     }
   }
 
+  .order-hr{
+    border: none;
+    border-bottom: 1px solid #ddd;
+    margin: 24px 0;
+  }
+
   .total {
     font-weight: bold;
     border-top: 1px solid var(--grey);
