--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,5 +1,5 @@
 .app-header {
-	padding: 1rem 2rem;
+	// padding: 1rem 2rem;
 	background-color: white;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	position: sticky;
@@ -8,9 +8,17 @@
 
 	.header-nav {
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 		justify-content: space-between;
-		padding: 0.5rem 1.5rem;
+		padding: 0 40px 22px 40px;
+
+		&.scrolled {
+			align-items: center;
+		}
+
+	}
+	.header-nav.stay-layout{
+		padding: 8px 285px;
 	}
 
 	.header-left,
@@ -51,41 +59,10 @@
 				&:active {
 					transform: scale(calc(42 / 40));
 
-					.button-icon {
-						// transform: scale(1.111);
-					}
+					// .button-icon {
+					// 	// transform: scale(1.111);
+					// }
 				}
-			}
-
-			.dropdown-menu {
-				position: absolute;
-				top: 120%;
-				right: 0;
-				background-color: white;
-				border: 1px solid #e4e4e4;
-				border-radius: 16px;
-				box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-				padding: 10px 0;
-				width: 240px;
-				padding: 8px 0;
-				z-index: 1000;
-			}
-
-			.dropdown-menu ul {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-			}
-
-			.dropdown-menu li {
-				padding: 12px 20px;
-				font-size: 14px;
-				color: $clr7;
-				cursor: pointer;
-			}
-
-			.dropdown-menu li:hover {
-				background-color: #f7f7f7;
 			}
 		}
 	}
@@ -94,16 +71,42 @@
 		display: flex;
 		align-items: center;
 
-		.logo img {
-			height: 6rem;
+
+		.logo {
+			text-decoration: none;
+			color: inherit;
+			display: flex;
+			align-items: center;
+			width: 102px;
+			height: 80px;
+		}
+
+		.logo-div {
+			display: flex;
+			align-items: center;
+			justify-content: start;
+			color: rgb(255, 56, 92);
+			background-color: #FFFFFF;
+			font-size: 25px;
+			font-weight: 600;
+			line-height: 1;
+			margin-top: 8px;
+		}
+
+		.logo-div img {
+			height: 3rem;
 			object-fit: contain;
+			display: block;
 		}
 	}
 
 	.header-center {
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		flex: 1;
 	}
+
 
 	.header-right {
 		display: flex;
