--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -1,6 +1,6 @@
 .stay-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
     // gap: .5em;
     gap: 24px;
     // background-color: yellow;
@@ -10,16 +10,6 @@
         &:hover .arrow {
             opacity: 1;
         }
-
-        // display: grid;
-        // grid-template-columns: max-content auto;
-
-        // padding: .5em;
-        // background-color: $clr2;
-
-        // color: $clr6;
-        // height: 300px;
-        // background-color: aqua;
         .actions {
             justify-self: end;
 
