--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -46,4 +46,6 @@
 @import "cmps/StayAmenities";
 @import "cmps/LoginModal.scss";
 @import "cmps/UserMenu.scss";
-
+@import "cmps/StayDescription.scss";
+@import "cmps/search-bar/Anywhere.scss";
+@import "cmps/search-bar/AnyWeek.scss";
