--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,26 +1,41 @@
-.app-footer{
+.app-footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     min-height: 3.5rem;
-
     padding: rem(10px) 1rem;
-    background-color: $clr4;
+    background-color: white;
+    font-size: 14px;
+    line-height: 18px;
+    //               .divider {
+    // border-top: 1px solid #ddd;  /* Light gray border */
+    //   margin: 24px 0;  
+    //       }
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 34px;
 
-    p {
-        margin: 0;
-    }
-    
-    span {
-        font-size: .8em;
-        
-        &.local-services {
-            color: $clr1;
+    .footer-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        p {
+            margin: 0;
         }
-        
-        &.remote-services {
-            color: $clr5;
+
+        span {
+            padding: 8px;
+
+            &.local-services {
+                color: $clr1;
+            }
+
+            &.remote-services {
+                color: $clr5;
+            }
         }
     }
 }
