--- a/src/assets/styles/cmps/StayOrder.scss
+++ b/src/assets/styles/cmps/StayOrder.scss
@@ -75,7 +75,7 @@
 .reserve-btn {
   width: 100%;
   padding: 0.8rem;
-  background-color: #ff385c;
+  background: linear-gradient(to right, #E61E4D 0%, #E31C5F 50%, #D70466 100%);
   color: white;
   border: none;
   border-radius: 12px;
