--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "pages/ReviewIndex";
 @import "pages/StayDetails";
 @import "pages/HostOrders.scss";
+@import "pages/GuestOrders.scss";
 // @import "pages/UserDetails";
 // @import "pages/TaskDetails";
 // @import "pages/LoginSignup";
