--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -15,8 +15,10 @@ $gray4: #333;
 $gray5: #6A6A6A;
 $gray6: #f2f2f2;
 $gray7: #f2f2f2a4;
+$gray8: #ebebeb;
 
 $font-grey: #717171;
+
 
 // Breakpoints
 $mobile-breakpoint: 460px;
