--- a/src/assets/styles/basics/_forms.scss
+++ b/src/assets/styles/basics/_forms.scss
@@ -22,3 +22,22 @@ form > * {
 .btn-link:hover {
 	background-color: $clr1;
 }
+
+.btn-show-more {
+      margin-top: 0.5rem;
+      margin: 0;
+      // background: none;
+      background-color: $gray6;
+      font-size: 16px;
+      border: none;
+      color: $clr7;
+      padding: 14px 24px 14px 24px;
+      font-weight: 500;
+      // text-decoration: underline;
+      cursor: pointer;
+      border-radius: 12px;
+
+      &:hover{
+        background-color: $gray8;
+      }
+    }
