--- a/src/assets/styles/cmps/MiniStayPreview.scss
+++ b/src/assets/styles/cmps/MiniStayPreview.scss
@@ -35,11 +35,12 @@
   align-items: center;
 //   gap: 12px;
   gap: 0.5rem;
-  padding: 0.5rem;
-  background-color: white;
-  border-radius: 12px;
-//   box-shadow: 0 1px 4px rgba(0,0,0,0.06);
-  max-width: 200px;
+  width: 100%;
+//   padding: 0.5rem;
+//   background-color: white;
+//   border-radius: 12px;
+// //   box-shadow: 0 1px 4px rgba(0,0,0,0.06);
+//   max-width: 200px;
 //   overflow: hidden;
 }
 
@@ -54,7 +55,11 @@
 .stay-info {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+//   gap: 4px;
+    white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+//   max-width: 600px;  
 }
 
 .stay-info h4 {
@@ -64,15 +69,15 @@ font-size: 15.2px;
   font-weight: 600;
   color: $clr7;
 }
-.stay-info h4 {
-    //   font-size: clamp(0.85rem, 2.5vw, 1.1rem);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 270px; 
-//  white-space: normal;
-//   word-break: break-word;
-}
+// .stay-info h4 {
+//     //   font-size: clamp(0.85rem, 2.5vw, 1.1rem);
+// //   white-space: nowrap;
+// //   overflow: hidden;
+// //   text-overflow: ellipsis;
+// //   max-width: 270px; 
+// //  white-space: normal;
+// //   word-break: break-word;
+// }
 
 .stay-info p {
   margin: 0;
