--- a/src/assets/styles/cmps/StayDescription.scss
+++ b/src/assets/styles/cmps/StayDescription.scss
@@ -3,23 +3,37 @@
   
     h2 {
       margin-bottom: 0.5rem;
+      font-size: 22px;
+      font-weight: 500;
     }
   
     p {
       white-space: pre-line;
+      font-size: 16px;
     }
   
-    .btn-show-more {
-      margin-top: 0.5rem;
-      background: none;
-      border: none;
-      color: #222;
-      font-weight: bold;
-      text-decoration: underline;
-      cursor: pointer;
-    }
+    // .full-description-modal {
+    //   font-size: 16px;
+    // }
+    // .btn-show-more {
+    //   margin-top: 0.5rem;
+    //   margin: 0;
+    //   // background: none;
+    //   background-color: $gray6;
+    //   font-size: 16px;
+    //   border: none;
+    //   color: $clr7;
+    //   padding: 14px 24px 14px 24px;
+    //   font-weight: 500;
+    //   // text-decoration: underline;
+    //   cursor: pointer;
+    //   border-radius: 12px;
+
+    //   &:hover{
+    //     background-color: $gray7;
+    //   }
+    // }
   }
-  
   .modal-overlay {
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
