--- a/src/assets/styles/cmps/StayImgs.scss
+++ b/src/assets/styles/cmps/StayImgs.scss
@@ -2,11 +2,11 @@
     display: grid;
     gap: 8px;
     grid-template-columns: 1fr 1fr;
-    height: 446.389px;
+    height: 503px;
     color: #FFFFFF;
     width: 100%;
     padding-top: 24px;
-    overflow: hidden;
+    // overflow: hidden;
     box-sizing: border-box;
 }
 
@@ -15,8 +15,10 @@
 .img1 {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
+    width: 560px;
+    height: 503px;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
 }
