--- a/src/assets/styles/cmps/search-bar/Anywhere.scss
+++ b/src/assets/styles/cmps/search-bar/Anywhere.scss
@@ -1,6 +1,8 @@
 .anywhere-modal {
-    width: 425px;
-	height: 540px;
+    // width: 425px;
+	// height: 540px;
+    width: 398px;
+    height: 492px;
     .city-list {
         list-style: none;
         padding: 0;
