--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -49,3 +49,5 @@
 @import "cmps/StayDescription.scss";
 @import "cmps/search-bar/Anywhere.scss";
 @import "cmps/search-bar/AnyWeek.scss";
+@import "cmps/search-bar/AddGuests.scss";
+@import "cmps/search-bar/ModalWrapper.scss";
