--- a/src/assets/styles/cmps/CategoryFilter.scss
+++ b/src/assets/styles/cmps/CategoryFilter.scss
@@ -25,12 +25,14 @@
         padding: 0 !important;
         margin: 0 !important;
         display: contents !important;
-        // display: flex;
-        // justify-content: center;
     }
 
+    // .carousel-group {
+    //     display: flex;
+    // //     // gap: 8px;
+    //   }      
+
     .carrousel-item {
-        display: flex;
         justify-content: center;
         align-items: center;
         padding: 0 !important;
@@ -73,7 +75,6 @@
             height: 24px;
             object-fit: contain;
             margin-bottom: 5px;
-            // background-image: url(chrome-extension://mbnbehikldjhnfehhnaidhjhoofhpehk/inspector-current-div.3db0786d.svg) !important;
         }
 
         span {
@@ -88,7 +89,7 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        z-index: 10;
+        z-index: 2;
         border-radius: 50%;
         background-color: #FFFFFF;
         border: 1px solid #ddd;
@@ -98,18 +99,24 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: background 0.3s;
+        text-align: center;
+
+        width: 32px !important;
+        min-width: unset !important;
+        height: 32px !important;
+        padding: 0 !important;
+        margin: 0 !important;
 
         &:hover {
             background-color: #f0f0f0;
         }
 
         &.left {
-            left: -20px;
+            left: 10px;
         }
 
         &.right {
-            right: -20px;
+            right: 10px;
         }
     }
 }
