--- a/src/assets/styles/cmps/UserMsg.scss
+++ b/src/assets/styles/cmps/UserMsg.scss
@@ -1,39 +1,20 @@
 .user-msg {
     position: fixed;
-    top: 60px;
-    right: .2em;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 1em 2em;
+    border-radius: 5px;
+    color: white;
+    z-index: 9999;
+    font-size: 1.2em;
+    background-color: #333;
 
-    display: flex;
-    align-items: center;
+    &.success {
+      background-color: #4caf50;
+    }
 
-    padding: .2em;
-    padding-inline-end: 20px;
-    background-color: grey;
-
-    color:white;
-    font-size: .9em;
-
-    opacity: 0;
-    translate: 150%;
-    transition: 600ms;
-}
-
-.user-msg.visible {
-    opacity: 1;
-    translate: 0;
-}
-
-.user-msg button {
-    background-color: $gray1;
-    padding: 1px 6px;
-    border:0;
-    border-radius: 50%;
-    color: $gray4;
-}
-
-.user-msg.success {
-    background-color: rgb(41, 189, 73);
-}
-.user-msg.error {
-    background-color: rgb(216, 59, 59);
-}
+    &.error {
+      background-color: #f44336;
+    }
+  }
