--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -3,19 +3,20 @@
     align-items: center;
     justify-content: space-between;
     min-height: 3.5rem;
-    padding: rem(10px) 1rem;
     background-color: white;
     font-size: 14px;
     line-height: 18px;
-    //               .divider {
-    // border-top: 1px solid #ddd;  /* Light gray border */
-    //   margin: 24px 0;  
-    //       }
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 34px;
+
+    .footer-inner {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin: 0 40px;
+
+		&.stay-layout {
+			margin: 0 277px;
+		}
+	}
 
     .footer-items {
         display: flex;
