Set overflow hidden of imges

--- a/src/assets/styles/cmps/StayImgs.scss
+++ b/src/assets/styles/cmps/StayImgs.scss
@@ -6,7 +6,7 @@
     color: #FFFFFF;
     width: 100%;
     padding-top: 24px;
-    // overflow: hidden;
+    overflow: hidden;
     box-sizing: border-box;
 }
 
